--- a/prototype.css
+++ b/prototype.css
@@ -1,5 +1,5 @@
 .tv-promo {
-  background: url('https://ibb.co/J7JHzG6');
+  background: url('https://i.ibb.co/SnCBKMY/Component-2.png');
 }
     
     
